--- a/TwitterClient/UserFollowersListViewController/UserFollowersListViewController.xib
+++ b/TwitterClient/UserFollowersListViewController/UserFollowersListViewController.xib
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UserFollowersListViewController">
             <connections>
+                <outlet property="tableView" destination="eH6-uo-EfK" id="cqL-x8-vqc"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -13,7 +16,41 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eH6-uo-EfK">
+                    <rect key="frame" x="11" y="8" width="578" height="573"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="578" id="Kdh-wE-aaS"/>
+                    </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="Kdh-wE-aaS"/>
+                        </mask>
+                    </variation>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="YRj-MS-IWR"/>
+                        <outlet property="delegate" destination="-1" id="vXQ-jE-veb"/>
+                    </connections>
+                </tableView>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="eH6-uo-EfK" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" constant="3" id="QA6-BZ-dNj"/>
+                <constraint firstItem="eH6-uo-EfK" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" constant="10" id="ULc-f1-vKI"/>
+                <constraint firstAttribute="bottom" secondItem="eH6-uo-EfK" secondAttribute="bottom" constant="19" id="WTt-QR-TKZ"/>
+                <constraint firstAttribute="trailingMargin" secondItem="eH6-uo-EfK" secondAttribute="trailing" constant="3" id="WlO-zU-h6s"/>
+                <constraint firstItem="eH6-uo-EfK" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="elF-Df-BJA"/>
+                <constraint firstItem="eH6-uo-EfK" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="topMargin" id="oFi-ak-hdd"/>
+                <constraint firstItem="eH6-uo-EfK" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="11" id="ruM-dH-5oQ"/>
+            </constraints>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="QA6-BZ-dNj"/>
+                    <exclude reference="ULc-f1-vKI"/>
+                    <exclude reference="WlO-zU-h6s"/>
+                </mask>
+            </variation>
         </view>
     </objects>
 </document>
